# pvc

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: implement-design.md  new-collector.md  new-feature.md  new-pipeline.md  new-scenario.md  tech-design.md  test-feature.md  test-pipeline.md
dcf/: __init__.py  cli.py  local_deploy.py  project.py  spark_session.py  warehouse_reader.py
dcf/config/: __init__.py  loader.py  models.py
dcf/engine/: __init__.py  fetcher.py  iterator.py  projector.py  runner.py
dcf/gcp/: _collector_utils.py  auth.py  batch_deploy.py  bootstrap.py  terraform.py
dcf/infra/templates/: airflow.Dockerfile.tftpl  batch_collector.Dockerfile.tftpl  docker-compose.yml.tftpl
dcf/writer/: __init__.py  iceberg.py
ddt/: cli.py  local_deploy.py
ddt/config/: models.py
ddt/engine/: runner.py
ddt/gcp/: batch_deploy.py
ddt/infra/modules/airflow_local/: main.tf  outputs.tf  variables.tf
design/: DESIGNS.md  batch-deployment-plan.md  batch-deployment.md
docs/: authenticated-collector.md  collector-config.md  pipeline-config.md
features/: FEATURES.md  README.md  batch-deployment.md  streaming-deployment.md
pvc/: cli.py  local_deploy.py  local_stream_runner.py  mcp_server.py  project.py  spark_session.py  warehouse_reader.py
pvc/config/: __init__.py  models.py
pvc/engine/: __init__.py  fetcher.py  projector.py  runner.py  transforms.py
pvc/gcp/: _pipeline_utils.py  beam_runner.py  bootstrap.py  gcloud.py  terraform.py
pvc/writer/: iceberg.py
testing/: FINDINGS.md
testing/runs/2026-05-09-github-private-repos/: pipeline.yml  report.md
testing/runs/2026-05-09-github-repos/: pipeline.yml  report.md
testing/runs/2026-05-10-gcp-data-lake/: report.md
testing/runs/2026-05-10-python-connector/: connector.py  pipeline.yml  report.md
testing/runs/2026-05-10-warehouse-transformation/: report.md
testing/runs/2026-05-11-batch-deployment/: pipeline.yml  report.md
testing/runs/2026-05-12-batch-deployment/: report.md
testing/runs/2026-05-12-batch-deployment-r4/: report.md
testing/runs/2026-05-12-batch-deployment-r5/: report.md
testing/runs/2026-05-12-streaming-deployment/: pipeline.yml  report.md
testing/runs/2026-05-12-streaming-deployment-r2/: report.md
testing/runs/2026-05-14-batch-deployment-local/: report.md
testing/scenarios/: batch-deployment-gcp.md  batch-deployment-local.md  batch-deployment.md  gcp-data-lake.md  github-commits.md  github-issues.md  github-private-repos.md  github-repos.md  jira-issues.md  local-batch-deployment.md  local-streaming-deployment.md  python-connector.md  rate-limit-resilience.md  streaming-deployment.md  stripe-payments.md  warehouse-transformation.md
tests/: conftest.py  test_deploy_cli.py  test_deploy_model.py  test_fetcher.py  test_mcp_run_catalog.py  test_runner_errors.py  test_transforms.py  test_warehouse_reader.py
(+24 files in other folders)
