[project]
name = "pvc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyspark==4.0.2",
    "pandas",
    "requests",
    "pyarrow",
    "pytz",
    "pydantic>=2",
    "typer[all]>=0.9",
    "google-auth>=2.29",
    "google-cloud-storage>=2.16",
    "google-cloud-secret-manager>=2.20",
    "google-api-python-client>=2.126",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "duckdb>=1.0",
]

[project.scripts]
pvc = "pvc.cli:app"

[tool.uv]
package = true
