[project]
name = "data-collection-framework"
version = "0.1.1"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "pyspark==4.0.2",
    "pandas",
    "requests",
    "pyarrow",
    "pytz",
    "pydantic>=2",
    "typer[all]>=0.9",
    "google-auth>=2.29",
    "google-cloud-storage>=2.16",
    "google-cloud-secret-manager>=2.20",
    "kafka-python>=2.0",
    "google-api-python-client>=2.126",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "duckdb>=1.0",
]

[project.scripts]
dcf = "dcf.cli:app"

[tool.setuptools.packages.find]
include = ["dcf*"]

[tool.setuptools.package-data]
dcf = ["infra/**/*"]

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
