[project]
name = "dcf-core"
version = "1.0.3"
requires-python = ">=3.12"
description = "D.ata C.ollection F.ramework - Define a data source, run dcf, query the data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Zeph Schafer", email = "zephyr.schafer@gmail.com"},
]
keywords = ["data", "ingestion", "etl", "data-pipeline", "yaml", "airflow", "gcp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pyspark==4.0.2",
    "pandas",
    "requests",
    "pyarrow",
    "pytz",
    "pydantic>=2",
    "typer[all]>=0.9",
    "google-auth>=2.29",
    "google-cloud-storage>=2.16",
    "google-cloud-secret-manager>=2.20",
    "kafka-python>=2.0",
    "google-api-python-client>=2.126",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "duckdb>=1.0",
]

[project.urls]
Homepage = "https://github.com/zephschafer/dcf"
Repository = "https://github.com/zephschafer/dcf"
"Bug Tracker" = "https://github.com/zephschafer/dcf/issues"

[project.scripts]
dcf = "dcf.cli:app"

[tool.setuptools.packages.find]
include = ["dcf*"]

[tool.setuptools.package-data]
dcf = ["infra/**/*"]

[tool.uv]
package = true
dev-dependencies = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
